--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,8 +4,8 @@
 
 .lucozade-red {
     color: #fff;
-    background-color: #f00;
-    border-color: #f00;
+    background: linear-gradient(#479b30, #3C8129);
+    border-color: #fff;
 }
 
 @font-face {
@@ -142,7 +142,7 @@ button {
 
 #view {
     width: 450px;
-    height: 478px;
+    height: 500px;
     padding: 5px;
     margin: 0 auto;
     position: relative;
@@ -189,7 +189,7 @@ button {
 
 #controls {
     text-align: center;
-    margin: 10px auto 0;
+    margin: 1.5em auto 0;
     padding: 0 10px;
     -webkit-transition: .5s;
     transition: .5s;
@@ -270,12 +270,12 @@ body > textarea {
 
 @media (max-width: 500px) and (min-width: 341px) {
     #controls {
-        width: 306.09999999999997px;
+        width: 336px;
     }
 
     #view {
         width: 350px;
-        height: 371px;
+        height: 390px;
     }
 
     .btn {
@@ -296,7 +296,7 @@ body > textarea {
     #view,
     #loading {
         width: 310px;
-        height: 329px;
+        height: 344.44px;
     }
 
     .btn {
@@ -304,7 +304,7 @@ body > textarea {
     }
 
     #controls {
-        width: 263.79999999999995px;
+        width: 328px;
     }
 
     #view .canvas-container {
@@ -405,7 +405,7 @@ body > textarea {
     font-size: 32px;
     line-height: 32px;
     letter-spacing: 2px;
-    color: #f00;
+    color: #3C8129;
     text-transform: uppercase;
     padding: 40px 40px 20px;
     margin: 0;
@@ -428,7 +428,7 @@ body > textarea {
 }
 
 .gallery ul li .over p a:hover {
-    color: #f00
+    color: #3C8129
 }
 
 .gallery ul li .video {
@@ -483,5 +483,5 @@ body > textarea {
 }
 
 .btn {
-    border-radius: 1rem;
+    border-radius: 0.5rem;
 }
